# lims-project

./: .env.example  .gitignore  AGENTS.md  README.md  Spec.md  docker-compose.yml  setup.sh
backend/: .env.example  README.md
lims-backend/: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  conftest.py  pyproject.toml  pytest.ini  tests_e2e.py
lims-backend/.github/workflows/: claude-code-review.yml  lint.yml
lims-backend/api/: router.py
lims-backend/apps/accounts/: admin.py  api.py  factories.py  permissions.py  schemas.py  tests.py
lims-backend/apps/accounts/migrations/: 0001_initial.py
lims-backend/apps/commissions/: api.py  models.py  schemas.py  serializers.py  services.py  state_machine.py  tests_api.py  tests_state_machine.py
lims-backend/apps/commissions/migrations/: 0001_initial.py  0002_initial.py
lims-backend/apps/common/: __init__.py  codes.py  exceptions.py
lims-backend/apps/dispatch/: __init__.py  admin.py  schemas.py  services.py  tasks.py
lims-backend/apps/dispatch/migrations/: 0001_initial.py  0002_initial.py
lims-backend/apps/equipment/: api.py  factories.py  models.py  schemas.py  serializers.py  tests.py
lims-backend/apps/equipment/migrations/: 0001_initial.py  0002_alter_equipmenttype_queue_name.py
lims-backend/apps/experiments/: admin.py  api.py  factories.py  models.py  schemas.py  tests.py
lims-backend/apps/experiments/migrations/: 0001_initial.py
lims-backend/apps/realtime/: __init__.py  api.py  events.py
lims-backend/apps/reports/: api.py  models.py  tests_api.py
lims-backend/apps/web/: apps.py  decorators.py  tests_dashboard_charts.py  urls.py  views.py
lims-backend/apps/wip/: admin.py  api.py  state_machine.py  tests_api.py  tests_state_machine.py
lims-backend/apps/wip/migrations/: 0001_initial.py
lims-backend/config/: celery.py  urls.py
lims-backend/docs/: jwt-auth-design-highlights.md
lims-backend/prds/: IMPLEMENTATION_PLAN.md  訪談逐字稿_還原版.md
lims-backend/tests/: __init__.py  test_lims_workflow.py
(+181 files in other folders)
