[project]
name = "lims-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.3",
    "django-ninja==1.6.2",
    "celery>=5.6.0",
    "dj-database-url>=2.3.0",
    "django-cors-headers>=4.9.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "django-unfold>=0.86.1",
    "redis>=7.0.0",
    "whitenoise>=6.12,<7",
    "PyJWT>=2.9.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "apps*", "config*"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN",  # flake8-annotations
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "ANN401",  # allow Any in type annotations
    "ANN002",  # allow missing type annotations for *args
    "ANN003",  # allow missing type annotations for **kwargs
]

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = ["ANN"]
"**/tests_*.py" = ["ANN"]
"**/tests/**" = ["ANN"]
"**/factories.py" = ["ANN"]
"**/admin.py" = ["ANN"]
"**/apps.py" = ["ANN"]
"**/migrations/**" = ["ANN", "I"]
"**/conftest.py" = ["ANN"]
"**/api.py" = ["ANN201", "ANN202"]
"**/api/*.py" = ["ANN201", "ANN202"]
"api/**" = ["ANN"]
"**/commands/**" = ["ANN"]
"**/selectors.py" = ["ANN"]
"**/serializers.py" = ["ANN"]
"**/services.py" = ["ANN"]
"**/tasks.py" = ["ANN"]
"apps/realtime/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
